--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,17 @@
 	version="2.5">
 	<display-name>Beendo</display-name>
 	<welcome-file-list>
-		<welcome-file>/Views/index.xhtml</welcome-file>
+		<welcome-file>Views/index.xhtml</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<servlet-mapping>
+	<!-- <servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
