--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,20 @@
 			<version>${spring.security.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-faces</artifactId>
+			<version>2.4.2.RELEASE</version>
+		</dependency>
+
+
+		<!-- Hibernate Dep -->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
