--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
-		<url-pattern>*.jsf</url-pattern>
+		<!-- <url-pattern>*.jsf</url-pattern> -->
 	</servlet-mapping>
 
 	<listener>
