--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,8 +43,13 @@
 	</filter-mapping>
 
 	<session-config>
-		<session-timeout>5</session-timeout>
+		<session-timeout>30</session-timeout>
 	</session-config>
+	
+	<error-page>
+    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    <location>/Views/Unsecured/Login/index.xhtml</location>
+</error-page>
 
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
