--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,11 +45,11 @@
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
-	
+
 	<error-page>
-    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-    <location>/Views/Unsecured/Login/index.xhtml</location>
-</error-page>
+		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
+		<location>/Views/Unsecured/Login/index.xhtml</location>
+	</error-page>
 
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
@@ -69,6 +69,10 @@
 	</context-param>
 	<context-param>
 		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
+		<param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
 		<param-value>true</param-value>
 	</context-param>
 
