--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,4 +61,13 @@
     <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
     <param-value>true</param-value>
   </context-param>
+<!--   <context-param>
+  <param-name>primefaces.FONT_AWESOME</param-name>
+  <param-value>true</param-value>
+  </context-param> -->
+  
+ <!--  <context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>bootstrap</param-value>
+</context-param> -->
 </web-app>
