EmailLinks view added and exttra them comverters removed.

--- a/src/main/resources/EmailSettings.properties
+++ b/src/main/resources/EmailSettings.properties
@@ -1,4 +1,8 @@
 timerDuration=1
 host=smtpout.secureserver.net
-username=Hassan.raza@sypore.com
-password=Password1
+#username=Hassan.raza@sypore.com
+#password=Password1
+
+username=support@sypore.com
+password=sypore2015
+
