--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
-  <listener>
+  <listener> 
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <listener>
@@ -22,6 +22,16 @@
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
+  <listener>
+  <listener-class>com.Beendo.Configuration.CustomHttpSessionListener</listener-class>
+  </listener>
+  
+  <listener>
+<listener-class>
+	org.springframework.security.web.session.HttpSessionEventPublisher
+</listener-class>
+</listener>
+  
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -31,7 +41,7 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <session-config>
-    <session-timeout>30</session-timeout>
+    <session-timeout>1</session-timeout>
   </session-config>
   <error-page>
     <exception-type>javax.faces.application.ViewExpiredException</exception-type>
