Loging issue fixed and Spring added is used instead of native timer

--- a/src/main/resources/EmailSettings.properties
+++ b/src/main/resources/EmailSettings.properties
@@ -1,4 +1,7 @@
-timerDuration=1
+#timerDuration=1
+
+#time is in miliseconds so 1* 1000 * 60 * 60 * 24 means whole one 24*60
+timerDuration=86400000 
 host=smtpout.secureserver.net
 #username=Hassan.raza@sypore.com
 #password=Password1
