--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -1,7 +1,7 @@
 #Dev Paths
-documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
-serverPath=localhost:8080/ParTracker
+#documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
+#serverPath=localhost:8080/ParTracker
 
 #Prod Paths
-#documentPath=//opt//partracker-doc//
-#serverPath=http://www.sypore.net:8081/ParTracker-beta-2.0.0
+documentPath=//opt//partracker-doc//
+serverPath=http://www.sypore.net:8081/ParTracker-beta-2.0.0
