--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,26 +1,23 @@
 #-------------------------------------------------------------------------------
 # Copyrights Inov8
 #-------------------------------------------------------------------------------
-# Set root logger level to DEBUG
-log4j.rootLogger=DEBUG,CONSOLE
+# Set root logger level to DEBUG ,file
+log4j.rootLogger=INFO, stdout
 
+log4j.category.com.Beendo.Utils.SharedData=DEBUG
 log4j.category.org.springframework=ERROR
 log4j.category.org.apache=OFF
 org.springframework.jdbc.UncategorizedSQLException=DEBUG
 
 # CONSOLE is set to be a ConsoleAppender.
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] (%F:%L) - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] (%F:%L) - %m%n
 
-#log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.FILELOG=uk.org.simonsite.log4j.appender.TimeAndSizeRollingAppender
-log4j.appender.FILELOG.File=logs/fbma.log
-log4j.appender.FILELOG.encoding=UTF-8
-log4j.appender.FILELOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILELOG.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] (%F:%L) - %m%n
-log4j.appender.FILELOG.threshold=DEBUG
-log4j.appender.FILELOG.MaxFileSize=50MB
-log4j.appender.FILELOG.MaxRollFileCount=100
-log4j.appender.FILELOG.immediateFlush = true
-log4j.appender.FILELOG.bufferedIO=false
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=C:\\Users\\Hassan\\Documents\\logigng.log
+log4j.appender.file.MaxFileSize=10MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
