--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,21 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+		 <dependency>
+		  <groupId>log4j</groupId>
+		   <artifactId>log4j</artifactId> 
 			<version>1.2.17</version>
+			 </dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
 		</dependency>
 
 		<dependency>
@@ -166,7 +177,7 @@
 		<!-- <dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
 			<version>2.3.2</version> </dependency> -->
 
- 	 	<dependency>
+		<dependency>
 			<groupId>net.bootsfaces</groupId>
 			<artifactId>bootsfaces</artifactId>
 			<version>0.8.0</version>
@@ -179,12 +190,8 @@
 			<scope>compile</scope>
 		</dependency>
 
-	<!-- 	<dependency>
-			<groupId>org.primefaces.extensions</groupId>
-			<artifactId>all-themes</artifactId>
-			<version>1.0.8</version>
-		</dependency>
- -->
+		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
+			<version>1.0.8</version> </dependency> -->
 
 		<dependency>
 			<groupId>commons-dbcp</groupId>
