minor Spelling fix for folder path. Version 2.0 is up

--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -1,12 +1,12 @@
 #sudo chmod -R ugo+rw // this to give folder write permissions
 #Local Paths
-documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
-serverPath=localhost:8080/ParTracker
+#documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
+#serverPath=localhost:8080/ParTracker
 
 #Dev Paths
 #documentPath=//opt//partracker-doc//
 #serverPath=http://www.sypore.net:8081/ParTracker-beta-2.0.0
 
 #Prod Paths
-#documentPath=//opt//partracker-doc-pord//
-#serverPath=http://www.sypore.net:8081/ParTracker-beta-2.0.0
+documentPath=//opt//partracker-doc-prod//
+serverPath=http://www.partracker.sypore.net:8081/ParTracker-2.0.0
