--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -9,16 +9,16 @@ hibernate.hikari.validationTimeout=10000
 hibernate.hikari.maxLifetime=600000
 
 #Prod Server Dev and Prod Db
-hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
+#hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_TestDb
-hibernate.hikari.dataSource.user=janjua_admin
-hibernate.hikari.dataSource.password=7kcvfRSMJ4qP
+#hibernate.hikari.dataSource.user=janjua_admin
+#hibernate.hikari.dataSource.password=7kcvfRSMJ4qP
 
-#Local Db
-#hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3307/janjua_TestDb
-#hibernate.hikari.dataSource.user=admin
-#hibernate.hikari.dataSource.password=admin
+#Local Db janjua_TestDb
+hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3307/testproddb
+hibernate.hikari.dataSource.user=admin
+hibernate.hikari.dataSource.password=admin
 
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
-#hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
