Code refactored for provider and Added json support in java and mysql

--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -7,6 +7,7 @@ hibernate.hikari.idleTimeout=30000
 hibernate.hikari.connectionTimeout=30000
 hibernate.hikari.validationTimeout=10000
 hibernate.hikari.maxLifetime=600000
+hibernate.dialect=com.Beendo.Configuration.MySQLDialect
 
 #Prod Server Dev and Prod Db
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
@@ -14,8 +15,8 @@ hibernate.hikari.maxLifetime=600000
 #hibernate.hikari.dataSource.user=janjua_admin
 #hibernate.hikari.dataSource.password=7kcvfRSMJ4qP
 
-#Local Db janjua_TestDb
-hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3307/testproddb
+#Local Db janjua_TestDb , testproddb
+hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3307/janjua_partracker_prod
 hibernate.hikari.dataSource.user=admin
 hibernate.hikari.dataSource.password=admin
 
