--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 		</dependency>
 
 
-		 <dependency>
-		  <groupId>log4j</groupId>
-		   <artifactId>log4j</artifactId> 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			 </dependency>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -164,6 +164,20 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.11.Final</version>
 		</dependency>
+
+		<!-- Hibernate JSON -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate4</artifactId>
+			<version>2.5.3</version>
+		</dependency>
+
+	<!-- 	<dependency>
+			<groupId>net.optionfactory</groupId>
+			<artifactId>hibernate-json</artifactId>
+			<version>1.0</version>
+		</dependency> -->
+
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
@@ -186,8 +200,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>5.3</version>
-			<scope>compile</scope>
+			<version>6.0</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
