JSON Mapping fix

--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -7,7 +7,7 @@ hibernate.hikari.idleTimeout=30000
 hibernate.hikari.connectionTimeout=30000
 hibernate.hikari.validationTimeout=10000
 hibernate.hikari.maxLifetime=600000
-hibernate.dialect=com.Beendo.Configuration.MySQLDialect
+hibernate.dialect=com.Beendo.CustomJSON.MySQLDialect
 
 #Prod Server Dev and Prod Db
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
