--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,9 @@
 			<version>2.4.2.RELEASE</version>
 		</dependency>
 
-
+		<!-- <dependency> <groupId>org.primefaces.themes</groupId> <artifactId>bootstrap</artifactId> 
+			<version>1.0.10</version> <scope>system</scope> <systemPath>C:\Users\Hassan\Downloads\bootstrap-1.0.10.jar</systemPath> 
+			</dependency> -->
 		<!-- Hibernate Dep -->
 
 
@@ -199,9 +201,16 @@
 			<version>6.0</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
-			<version>1.0.8</version> </dependency> -->
+		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>primefaces-extensions</artifactId>
+			<version>6.0.0</version>
+		</dependency>
 
+	<!-- 	 <dependency> <groupId>org.primefaces.extensions</groupId>
+		 <artifactId>all-themes</artifactId> 
+			<version>1.0.8</version> </dependency>
+ -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
