--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,21 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<spring.version>4.2.1.RELEASE</spring.version>
+		<spring.version>4.3.2.RELEASE</spring.version>
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
 	</properties>
 
+
+<dependencyManagement>
+<dependencies>
+<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+</dependencies>
+</dependencyManagement>
 	<dependencies>
 
 		<!-- Java Mail -->
@@ -84,12 +95,8 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
+ 	 	
+ 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
@@ -116,7 +123,7 @@
 		<dependency>
 			<groupId>org.springframework.webflow</groupId>
 			<artifactId>spring-faces</artifactId>
-			<version>2.4.2.RELEASE</version>
+			<version>2.4.4.RELEASE</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>org.primefaces.themes</groupId> <artifactId>bootstrap</artifactId> 
@@ -159,12 +166,15 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>4.1.6.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> 
+			<version>4.3.11.Final</version> </dependency> -->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.11.Final</version>
+			<version>5.2.2.Final</version>
 		</dependency>
 
 		<!-- Hibernate JSON -->
@@ -207,10 +217,8 @@
 			<version>6.0.0</version>
 		</dependency>
 
-	<!-- 	 <dependency> <groupId>org.primefaces.extensions</groupId>
-		 <artifactId>all-themes</artifactId> 
-			<version>1.0.8</version> </dependency>
- -->
+		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
+			<version>1.0.8</version> </dependency> -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
