--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -15,11 +15,12 @@ hibernate.dialect=com.Beendo.CustomJSON.MySQLDialect
 #hibernate.hikari.dataSource.user=janjua_admin
 #hibernate.hikari.dataSource.password=7kcvfRSMJ4qP
 
-#Local Db janjua_TestDb , testproddb
+#Local Db janjua_TestDb , testschema // janjua_partracker_prod
 hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3307/janjua_partracker_prod
 hibernate.hikari.dataSource.user=admin
 hibernate.hikari.dataSource.password=admin
 
+#validate
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
 hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
