--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,16 @@
 	</properties>
 
 
-<dependencyManagement>
-<dependencies>
-<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
 
-</dependencies>
-</dependencyManagement>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 
 		<!-- Java Mail -->
@@ -95,8 +95,8 @@
 			<version>${spring.version}</version>
 		</dependency>
 
- 	 	
- 		<dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
@@ -126,6 +126,11 @@
 			<version>2.4.4.RELEASE</version>
 		</dependency>
 
+		<!-- <dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>2.5.1</version>
+		</dependency> -->
 		<!-- <dependency> <groupId>org.primefaces.themes</groupId> <artifactId>bootstrap</artifactId> 
 			<version>1.0.10</version> <scope>system</scope> <systemPath>C:\Users\Hassan\Downloads\bootstrap-1.0.10.jar</systemPath> 
 			</dependency> -->
