--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -13,11 +13,11 @@ hibernate.dialect=com.Beendo.CustomJSON.MySQLDialect
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_TestDb
 #hibernate.hikari.dataSource.user=janjua_admin
-#hibernate.hikari.dataSource.password=7kcvfRSMJ4qP
+#hibernate.hikari.dataSource.password=7kcvfRSMJ4qP!
 
 #Local Db janjua_TestDb , testschema // janjua_partracker_prod
 hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
-hibernate.hikari.dataSource.user=admin
+hibernate.hikari.dataSource.user=root
 hibernate.hikari.dataSource.password=admin
 
 #validate
