--- a/pom.xml
+++ b/pom.xml
@@ -126,11 +126,19 @@
 			<version>2.4.4.RELEASE</version>
 		</dependency>
 
-		<!-- <dependency>
+		  <!-- <dependency>
 			<groupId>org.omnifaces</groupId>
 			<artifactId>omnifaces</artifactId>
 			<version>2.5.1</version>
 		</dependency> -->
+		
+		 <dependency>
+    <groupId>org.omnifaces</groupId>
+    <artifactId>omnifaces</artifactId>
+    <version>1.6.3</version>
+</dependency>
+		
+		
 		<!-- <dependency> <groupId>org.primefaces.themes</groupId> <artifactId>bootstrap</artifactId> 
 			<version>1.0.10</version> <scope>system</scope> <systemPath>C:\Users\Hassan\Downloads\bootstrap-1.0.10.jar</systemPath> 
 			</dependency> -->
@@ -222,8 +230,6 @@
 			<version>6.0.0</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
-			<version>1.0.8</version> </dependency> -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -237,16 +243,29 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.primefaces.extensions</groupId> <artifactId>all-themes</artifactId> 
-			<version>1.0.8</version> </dependency> -->
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
+		    <dependency>  
+        <groupId>org.primefaces.themes</groupId>  
+        <artifactId>all-themes</artifactId>  
+        <version>1.0.10</version>  
+    </dependency>  
+		
 	</dependencies>
 
 	<repositories>
+	
+	<repository>
+        <id>prime-repo</id>
+        <name>PrimeFaces Maven Repository</name>
+        <url>http://repository.primefaces.org</url>
+        <layout>default</layout>
+    </repository>
+	
 		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
