--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,7 +88,7 @@
     <param-name>primefaces.THEME</param-name>
     <param-value>bootstrap</param-value>
 </context-param>  -->
-
+<!-- bootstrap -->
    <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
