Document Viewing fixed and alert added when deletng Tranactions while creating

--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -4,8 +4,8 @@ documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
 serverPath=localhost:8080/ParTracker
 
 #Dev Paths
-#documentPath=//opt//partracker-doc//
-#serverPath=http://www.sypore.net:8081/ParTracker-beta-2.0.0
+#documentPath=//opt//apache-tomcat-8.0.30//documents_dev//providers//
+#serverPath=http://documentsDev.sypore.net:8081
 
 #Prod Paths
 #documentPath=//opt//partracker-doc-prod//
