--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -1,11 +1,11 @@
 #sudo chmod -R ugo+rw // this to give folder write permissions
 #Local Paths
-documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
-serverPath=localhost:8080/ParTracker
+#documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
+#serverPath=localhost:8080/ParTracker
 
 #Dev Paths
-#documentPath=//opt//apache-tomcat-8.0.30//documents_dev//providers//
-#serverPath=http://documentsDev.sypore.net:8081
+documentPath=//opt//apache-tomcat-8.0.30//documents_dev//providers//
+serverPath=http://documentsDev.sypore.net:8081
 
 #Prod Paths
 #documentPath=//opt//partracker-doc-prod//
