--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -6,8 +6,8 @@ documentURL=localhost:8080/ParTracker
 
 #Dev Paths
 #documentPath=//opt//apache-tomcat-8.0.30//documents_dev//providers//
-#serverPath=http://documentsDev.sypore.net:8081
-#documentURL=http://documentsDev.sypore.net:8081/
+#serverPath=http://documentsDev.sypore.net
+#documentURL=http://documentsDev.sypore.net/
 
 #Prod Paths
 #documentPath=//opt//apache-tomcat-8.0.30//documents_prod//providers//
