report Fixed issue

--- a/src/main/resources/ServerSettings.properties
+++ b/src/main/resources/ServerSettings.properties
@@ -1,8 +1,8 @@
 #sudo chmod -R ugo+rw // this to give folder write permissions
 #Local Paths
-documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
-serverPath=localhost:8080/ParTracker
-documentURL=localhost:8080/ParTracker
+#documentPath=C:\\Users\\Hassan\\Documents\\partracker-doc\\
+#serverPath=localhost:8080/ParTracker
+#documentURL=localhost:8080/ParTracker
 
 #Dev Paths
 #documentPath=//opt//apache-tomcat-8.0.30//documents_dev//providers//
@@ -10,6 +10,6 @@ documentURL=localhost:8080/ParTracker
 #documentURL=http://documentsDev.sypore.net/
 
 #Prod Paths
-#documentPath=//opt//apache-tomcat-8.0.30//documents_prod//providers//
-#serverPath=http://www.partracker.sypore.net/ParTracker-3.0.0
-#documentURL=http://documents.sypore.net/
+documentPath=//opt//apache-tomcat-8.0.30//documents_prod//providers//
+serverPath=http://www.partracker.sypore.net/ParTracker-3.0.0
+documentURL=http://documents.sypore.net/
