--- a/src/main/resources/DbConfig.properties
+++ b/src/main/resources/DbConfig.properties
@@ -10,16 +10,16 @@ hibernate.hikari.maxLifetime=600000
 hibernate.dialect=com.Beendo.CustomJSON.MySQLDialect
 
 #Prod Server Dev and Prod Db
-hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
+#hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
 #162.214.3.88
 #hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_TestDb
-hibernate.hikari.dataSource.user=janjua_admin
-hibernate.hikari.dataSource.password=7kcvfRSMJ4qP!
+#hibernate.hikari.dataSource.user=janjua_admin
+#hibernate.hikari.dataSource.password=7kcvfRSMJ4qP!
 
 #Local Db janjua_TestDb , testschema // janjua_partracker_prod
-#hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
-#hibernate.hikari.dataSource.user=root
-#hibernate.hikari.dataSource.password=admin
+hibernate.hikari.dataSource.url=jdbc:mysql://127.0.0.1:3306/janjua_partracker_prod
+hibernate.hikari.dataSource.user=root
+hibernate.hikari.dataSource.password=admin
 
 #validate
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
